# rhdh-plugin-gitops-updater

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  main.py  pyproject.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
src/: constants.py  exceptions.py  github_api_client.py  loader.py  types.py  updater.py  utils.py
tests/: conftest.py  test_constants.py  test_github_api_client.py  test_loader.py  test_main.py  test_placeholder.py  test_updater.py  test_utils.py
