[project]
name = "rhdh-plugin-gitops-updater"
version = "0.1.0"
description = "A script that updates an RHDH GitOps repository with the latest RHDH plugin versions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "pygithub>=2.1.1",
]

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest>=7.4.0", "pre-commit>=3.5.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ty.src]
include = ["src", "main.py"]
